# BadGL

./: .gitignore  CMakeLists.txt  readme.txt  vcpkg.json
demos/: CMakeLists.txt  demo_main.cpp  equilatral_shapes.cpp  readme.txt
includes/: BadGL_buffers.hpp  BadGL_main.hpp  BadGL_shaders.hpp  BadGL_window.hpp
src/: BadGL_main.cpp  bruhShapes.cpp
